Cleanup deprecation warnings